<package format="2">
  <name>protobuf_catkin</name>
  <version>0.0.0</version>
  <description>protobuf_catkin</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--
  <buildtool_depend>autoconf</buildtool_depend>
  <buildtool_depend>libtool</buildtool_depend>
  -->
  <build_depend>protobuf-dev</build_depend>
  <build_export_depend>protobuf-dev</build_export_depend>
  <!-- <exec_depend>protobuf</exec_depend> -->
  <exec_depend>protobuf-dev</exec_depend> <!-- libprotobuf-lite9v5 is not in protobuf, but a dependency of libprotobuf-dev -->

</package>
