<package>
  <name>protobuf_catkin</name>
  <version>3.4.0</version>
  <description>protobuf_catkin</description>
  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>

  <author email="info@intermodalics.eu">Intermodalics BVBA</author>
  <author email="slynen@ethz.ch">Simon Lynen</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
